hard-gists/8209b67ff556cb18651d/run.log
=== Docker Run Log for 8209b67ff556cb18651d ===
Started at: Mi 29. Okt 17:41:17 CET 2025

[2025-10-29 17:41:17] START: Running container for 8209b67ff556cb18651d
[2025-10-29 17:41:17] SUCCESS: Container 07d155448a1bc39d828d8cbb00a29500be8fa3abffeb8811883d540f51130606 started for 8209b67ff556cb18651d
=== Container logs for 8209b67ff556cb18651d ===
  File "/snippet.py", line 55
    print "Waiting for connection on RFCOMM channel %d" % port
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 8209b67ff556cb18651d ===
[2025-10-29 17:41:19] INFO: Container 07d155448a1bc39d828d8cbb00a29500be8fa3abffeb8811883d540f51130606 has stopped
